[package]
name = "mobility-chess"
version = "0.1.0"
authors = ["iyzana <16743652+iyzana@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
shakmaty = "0.16.3"
rayon = "1.3.1"
arrayvec = "0.5.1"

[profile.release]
debug = true
